# BootstrapGL

./: .gitignore  .gitmodules  README.md  bootstrap.sh
Examples/Lightning/: CMakeLists.txt  main.cpp
Src/: CMakeLists.txt
Src/Context/: AppContext.cpp  AppContext.hpp  Camera.cpp  Camera.hpp  GLFWLibHandle.cpp  GLFWLibHandle.hpp  WindowHandle.cpp  WindowHandle.hpp
Src/Light/: DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
Src/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
Src/Shader/: ActiveShaderProgramGuard.cpp  ActiveShaderProgramGuard.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Src/Texture/: Material.cpp  Material.hpp  Texture.cpp  Texture.hpp  TextureHandle.cpp  TextureHandle.hpp  TextureInfo.cpp  TextureInfo.hpp
Src/VAO/: Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexArrayHandle.cpp  VertexArrayHandle.hpp  VertexBufferHandle.cpp  VertexBufferHandle.hpp
templates/: CMakeLists.txt  main.cpp
templates/lightning/: main.cpp
templates/lightning/shaders/: fragment.glsl  vertex.glsl  vertex_light.glsl
